--- a/wwwroot/react-app/package.json
+++ b/wwwroot/react-app/package.json
@@ -8,6 +8,10 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.8",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "craco": "^0.0.3",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
@@ -16,13 +20,14 @@
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "tailwind": "^4.0.0",
+    "typescript": "^5.8.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "eject": "react-scripts eject",
     "start": "craco start",
     "test": "craco test",
-    "build": "parcel watch src/index.js --no-source-maps"
+    "build": "parcel watch src/index.tsx --no-source-maps"
   },
   "eslintConfig": {
     "extends": [
