Feedback addressed and moved project to typescript

--- a/wwwroot/react-app/package.json
+++ b/wwwroot/react-app/package.json
@@ -19,9 +19,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.6",
     "tailwind": "^4.0.0",
     "typescript": "^5.8.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "eject": "react-scripts eject",
